--- a/Front.App.CaseGerenciamentoTeste/Front.App.CaseGerenciamentoTeste.csproj
+++ b/Front.App.CaseGerenciamentoTeste/Front.App.CaseGerenciamentoTeste.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Model\Auth.cs" />
     <Compile Include="Model\AuthTrocaSenha.cs" />
+    <Compile Include="Model\Sistema.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
