class limpar and cbo

--- a/Front.App.CaseGerenciamentoTeste/Front.App.CaseGerenciamentoTeste.csproj
+++ b/Front.App.CaseGerenciamentoTeste/Front.App.CaseGerenciamentoTeste.csproj
@@ -73,6 +73,7 @@
     <Compile Include="View\frmSelectCenario.Designer.cs">
       <DependentUpon>frmSelectCenario.cs</DependentUpon>
     </Compile>
+    <Compile Include="Utilities\Limpar.cs" />
     <Compile Include="View\frmSelectProj.cs">
       <SubType>Form</SubType>
     </Compile>
