--- a/Front.App.CaseGerenciamentoTeste/Front.App.CaseGerenciamentoTeste.csproj
+++ b/Front.App.CaseGerenciamentoTeste/Front.App.CaseGerenciamentoTeste.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Model\SistemasxProjetos.cs" />
     <Compile Include="Model\StatusType.cs" />
     <Compile Include="Model\Cenario.cs" />
+    <Compile Include="Model\Caso.cs" />
     <Compile Include="View\frmModelagemCenario.cs">
       <SubType>Form</SubType>
     </Compile>
